--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -2,7 +2,6 @@
 
 body {
   background-color: $clr-main-900;
-  overflow-x: hidden;
 }
 
 main,
